--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -3,7 +3,7 @@
   "RU": "EN",
   "Contact": "Contact",
   "For any questions please text me:": "For any questions please text me:",
-  "Send message": "Send message",
+  "send message": "send message",
   "Name": "Name",
   "Message": "Message",
   "Email": "Email"
