--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -3,7 +3,7 @@
   "RU": "RU",
   "Contact": "Контакты",
   "For any questions please text me:": "По всем вопросам пишите мне:",
-  "Send message": "Отправить",
+  "send message": "отправить",
   "Name": "Имя",
   "Message": "Сообщение",
   "Email": "Почта"
