--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -6,5 +6,30 @@
   "send message": "send message",
   "Name": "Name",
   "Message": "Message",
-  "Email": "Email"
+  "Email": "Email",
+  "HI": "HI",
+  "MY NAME IS": "MY NAME IS",
+  "ARTUR HAREKSIAN": "ARTUR HAREKSIAN",
+  "A WEB DEVELOPER": "A WEB DEVELOPER",
+  "HOME": "HOME",
+  "TECH STACK": "TECH STACK",
+  "PROJECTS": "PROJECTS",
+  "CONTACT": "CONTACT",
+  "My Tech Stack": "My Tech Stack",
+  "Technologies I’ve been working with recently": "Technologies I’ve been working with recently",
+  "Projects": "Projects",
+  "Things I’ve built so far": "Things I’ve built so far",
+  "Приложение, которое позволяет создавать и изучать карточки с вопросами и ответами": {
+    " Также позволяет делиться своими наборами карточек с другими пользователями": {
+      "": "Приложение, которое позволяет создавать и изучать карточки с вопросами и ответами. Также позволяет делиться своими наборами карточек с другими пользователями."
+    }
+  },
+  "Приложение для управления задачами": {
+    " Позволяет добавлять, редактировать, отмечать задачи, а также сортировать и устанавливать приоритеты": "Приложение для управления задачами. Позволяет добавлять, редактировать, отмечать задачи, а также сортировать и устанавливать приоритеты"
+  },
+  "Разработка социальной сети": {
+    " Пользователи могут создавать аккаунты, добавлять друзей и обмениваться сообщениями": {
+      "": "Разработка социальной сети. Пользователи могут создавать аккаунты, добавлять друзей и обмениваться сообщениями."
+    }
+  }
 }
