--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -6,5 +6,30 @@
   "send message": "отправить",
   "Name": "Имя",
   "Message": "Сообщение",
-  "Email": "Почта"
+  "Email": "Почта",
+  "HI": "ПРИВЕТ",
+  "MY NAME IS": "МЕНЯ ЗОВУТ",
+  "ARTUR HAREKSIAN": "АРТУР ХАРЕКСЯН",
+  "A WEB DEVELOPER": " WEB РАЗРАБОТЧИК",
+  "HOME": "ГЛАВНАЯ",
+  "TECH STACK": "НАВЫКИ",
+  "PROJECTS": "ПРОЕКТЫ",
+  "CONTACT": "КОНТАКТЫ",
+  "My Tech Stack": "НАВЫКИ",
+  "Technologies I’ve been working with recently": "Технологии, с которыми я работал в последнее время",
+  "Projects": "ПРОЕКТЫ",
+  "Things I’ve built so far": "Things I’ve built so far",
+  "Приложение, которое позволяет создавать и изучать карточки с вопросами и ответами": {
+    " Также позволяет делиться своими наборами карточек с другими пользователями": {
+      "": "Приложение, которое позволяет создавать и изучать карточки с вопросами и ответами. Также позволяет делиться своими наборами карточек с другими пользователями."
+    }
+  },
+  "Приложение для управления задачами": {
+    " Позволяет добавлять, редактировать, отмечать задачи, а также сортировать и устанавливать приоритеты": "Приложение для управления задачами. Позволяет добавлять, редактировать, отмечать задачи, а также сортировать и устанавливать приоритеты"
+  },
+  "Разработка социальной сети": {
+    " Пользователи могут создавать аккаунты, добавлять друзей и обмениваться сообщениями": {
+      "": "Разработка социальной сети. Пользователи могут создавать аккаунты, добавлять друзей и обмениваться сообщениями."
+    }
+  }
 }
