--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -23,9 +23,5 @@
       "": "Приложение для управления задачами. Позволяет добавлять, редактировать, отмечать задачи, а также сортировать и устанавливать приоритеты."
     }
   },
-  "Developing a social network": {
-    " Users can create accounts, add friends and exchange messages": {
-      "": "Разработка социальной сети. Пользователи могут создавать аккаунты, добавлять друзей и обмениваться сообщениями."
-    }
-  }
+  "Developing a social network": "Разработка социальной сети. Пользователи могут создавать аккаунты, добавлять друзей, создавать посты и обмениваться сообщениями."
 }
