--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -23,5 +23,6 @@
       "": "An application for task management. Allows you to add, edit, mark tasks, as well as sort and prioritize them."
     }
   },
-  "Developing a social network": "An application that allows you to create and study question and answer cards. It also allows you to share your sets of cards with other users."
+  "Developing a social network": "An application that allows you to create and study question and answer cards. It also allows you to share your sets of cards with other users.",
+  "digitalMarketplace": "A digital marketplace that allows you to create goods and sell them"
 }
