--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -23,5 +23,7 @@
       "": "Приложение для управления задачами. Позволяет добавлять, редактировать, отмечать задачи, а также сортировать и устанавливать приоритеты."
     }
   },
-  "Developing a social network": "Разработка социальной сети. Пользователи могут создавать аккаунты, добавлять друзей, создавать посты и обмениваться сообщениями."
+  "Developing a social network": "Разработка социальной сети. Пользователи могут создавать аккаунты, добавлять друзей, создавать посты и обмениваться сообщениями.",
+  "digitalMarketplace": "Цифровая торговая площадка позволяющая создавать товары и продовать их"
+
 }
