add new project

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -24,5 +24,5 @@
     }
   },
   "Developing a social network": "An application that allows you to create and study question and answer cards. It also allows you to share your sets of cards with other users.",
-  "digitalMarketplace": "A digital marketplace that allows you to create goods and sell them"
+  "digitalMarketplace": "Full-stack application. A digital marketplace that allows you to create goods and sell them"
 }
