--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -24,6 +24,6 @@
     }
   },
   "Developing a social network": "Разработка социальной сети. Пользователи могут создавать аккаунты, добавлять друзей, создавать посты и обмениваться сообщениями.",
-  "digitalMarketplace": "Цифровая торговая площадка позволяющая создавать товары и продовать их"
+  "digitalMarketplace": "Full-stack приложение. Цифровая торговая площадка позволяющая создавать товары и продавать их"
 
 }
